--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -3,21 +3,14 @@
     
 {% block content %}
 
-
-
 <header id="hero">
-    <div class="inner">
-        <div class="overlay center">
-            <div class="row">
-                <div class="col">
-                    <h1 class="display-4">Website Design/Development <span id="join"></span>& Digital Marketing</h1>
-                    <p>We design and develop websites for businesses with stunning results</p>
-                    <a class="btn" href="#">Contact Us</a>
-                </div>
-            </div>
-        </div>
+    <div class="container center">
+        <h1>Website Design/Development <span id="join"></span>& Digital Marketing</h1>
+        <p>We design and develop websites for businesses with stunning results</p>
+        <a class="btn" href="#">Contact Us</a>
     </div>
 </header>
+
 
 <!-- Showcase Section
 ==================
