--- a/templates/layout.html
+++ b/templates/layout.html
@@ -40,7 +40,7 @@
     {% block content %}
     {% endblock %}
 
-<footer class="main-footer">
+<footer class="main-footer center">
     <div class="row">
         <div id="contact" class="col s12 m6">
             <h5>Contact Us</h5>
@@ -53,17 +53,15 @@
         </div>
         <div class="col s12 m6" id="map"></div>
     </div>
-    
-    <div class="container center">
-        <div class="row">
-            <div class="s12">
-                <p>Copyright NEUPYTECH &copy;. All rights reserved.</p>
-            </div>
-        </div>
-    </div>
 </footer>
         
-
+<div class="container center">
+    <div class="row">
+        <div class="s12">
+            <p>Copyright NEUPYTECH &copy;. All rights reserved.</p>
+        </div>
+    </div>
+</div>
 <!-- Map JS
 ==================
 -->
