--- a/neupytech/static/css/style.css
+++ b/neupytech/static/css/style.css
@@ -1,37 +1,23 @@
-body, html *{
-    margin:0;
+body {
+    font-family: 'Raleway', Arial, Helvetica, sans-serif;
 }
 
-#hero {
+.overlay {
+    background: rgba(63, 57, 77, 0.7);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.main-header {
     background: url(../img/laptop.jpeg);
-    background-attachment: fixed;
     background-size: cover;
-    min-height: 300px;
     background-position: center;
+    height: 100vh;
+    min-height: 300px;
+    color: #fff;
+    position: relative;
 }
-
-
-#hero h1 {
-    font-size: 1.9rem;
-    padding-top: 50px;
-}
-
-.card {
-    padding: 20px;
-    border: 1px solid #00dba0;
-
-}
-
-.fas {
-    font-size: 4.0rem;
-    color: #00dba0;
-}
-
-/* Map Styling */
-
-#map {
-    height: 400px;
-    background-color: aquamarine;
-}
-
-
