--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,27 +14,30 @@
 </head>
 <body>
     
-    <nav>
-        <div class="container">
-            <div class="nav-wrapper">
-                <a href="{% url 'pages:home' %}" class="brand-logo">neupytech</a>
-                <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-                <ul class="right hide-on-med-and-down">
-                <li><a href="{% url 'pages:about' %}">About Us</a></li>
-                <li><a href="{% url 'pages:portfolio' %}">Portfolio</a></li>
-                <li><a href="{% url 'contact:contact' %}">Contact Us</a></li>
-                <li><a href="{% url 'posts:list' %}">Blog</a></li>
-                </ul>
+    <div class="navbar-fixed">
+        <nav>
+            <div class="container">
+                <div class="nav-wrapper">
+                    <a href="{% url 'pages:home' %}" class="brand-logo">neupytech</a>
+                    <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                    <ul class="right hide-on-med-and-down">
+                    <li><a href="{% url 'pages:about' %}">About Us</a></li>
+                    <li><a href="{% url 'pages:portfolio' %}">Portfolio</a></li>
+                    <li><a href="{% url 'contact:contact' %}">Contact Us</a></li>
+                    <li><a href="{% url 'posts:list' %}">Blog</a></li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
-            
-    <ul class="sidenav" id="mobile-nav">
-        <li><a href="{% url 'pages:about' %}">About Us</a></li>
-        <li><a href="{% url 'pages:portfolio' %}">Portfolio</a></li>
-        <li><a href="{% url 'contact:contact' %}">Contact Us</a></li>
-        <li><a href="{% url 'posts:list' %}">Blog</a></li>
-    </ul> 
+        </nav>
+
+        <ul class="sidenav" id="mobile-nav">
+            <li><a href="{% url 'pages:about' %}">About Us</a></li>
+            <li><a href="{% url 'pages:portfolio' %}">Portfolio</a></li>
+            <li><a href="{% url 'contact:contact' %}">Contact Us</a></li>
+            <li><a href="{% url 'posts:list' %}">Blog</a></li>
+        </ul>
+    </div>
+
 
     <!-- Django Template Tags -->
     {% block content %}
@@ -55,7 +58,7 @@
     </div>
 </footer>
         
-<div class="container center">
+<div class="center">
     <div class="row">
         <div class="s12">
             <p>Copyright NEUPYTECH &copy;. All rights reserved.</p>
