Added services section

--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -13,35 +13,68 @@
     </div>
 </header>
 
-<!-- Cards Section
+<!-- Services Section
 ==================
 -->
 
-<section class="section-card center">
+<div class="container" id="box">
+    <h2 class="center">Our Services</h2>
     <div class="row">
-        <div class="col s12 m6 l3">
-            <h4>UI/UX Design</h4>
-            <i class="material-icons">desktop_windows</i>
-            <p>We take the research and build website that takes the user experience into consideration.</p>
-        </div>
-        <div class="col s12 m6 l3">
-                <h4>Web Development</h4>
-                <i class="material-icons">build</i>
-                <p>We build more than just a website, we come up with the best solutions to bring the results your desire.</p>
-                
+        <div class="card col s12 m6 l3">
+            <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="{% static "img/ux.jpg" %}">
             </div>
-            <div class="col s12 m6 l3">
-                    <h4>Research/Strategy</h4>
-                    <i class="material-icons">domain</i>
-                    <p class="">We mine deep to bring you the best with regards to your specific business needs. And then we put the strategy to achieving your goal in motion.</p>
+            <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4">UI/UX Design<i class="material-icons right">more_vert</i></span>
+                <p><a href="#">This is a link</a></p>
+            </div>
+            <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4">UI/UX Design<i class="material-icons right">close</i></span>
+                <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            </div>
+        </div>
+        <div class="card col s12 m6 l3">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="{% static "img/webdev.jpeg" %}">
                 </div>
-                <div class="col s12 m6 l3">
-                        <h4>DIGITAL Marketing</h4>
-                        <i class="material-icons">group_add</i>
-                        <p class="">We empower your customers and make them feel confident in your product through marketing.</p>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">WEB Dev<i class="material-icons right">more_vert</i></span>
+                    <p><a href="#">This is a link</a></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">WEB Dev<i class="material-icons right">close</i></span>
+                    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                </div>
+            </div>
+            <div class="card col s12 m6 l3">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="{% static "img/research.jpeg" %}">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Research/Strategy<i class="material-icons right">more_vert</i></span>
+                        <p><a href="#">This is a link</a></p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Research/Strategy<i class="material-icons right">close</i></span>
+                        <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                    </div>
+                </div>
+                <div class="card col s12 m6 l3">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="{% static "img/market.jpeg" %}">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">DIGITAL Marketing<i class="material-icons right">more_vert</i></span>
+                            <p><a href="#">This is a link</a></p>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">DIGITAL Marketing<i class="material-icons right">close</i></span>
+                            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                        </div>
                     </div>
     </div>
-</section>
+</div>
+
 
 <!-- About Section
 ==================
