--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -21,19 +21,6 @@
     <h2 class="center">Our Services</h2>
     <div class="row">
         <div class="card col s12 m6 l3">
-            <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="{% static "img/ux.jpg" %}">
-            </div>
-            <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">UI/UX Design<i class="material-icons right">more_vert</i></span>
-                <p><a href="#">This is a link</a></p>
-            </div>
-            <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">UI/UX Design<i class="material-icons right">close</i></span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-            </div>
-        </div>
-        <div class="card col s12 m6 l3">
                 <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator" src="{% static "img/webdev.jpeg" %}">
                 </div>
@@ -46,6 +33,45 @@
                     <p>Here is some more information about this product that is only revealed once clicked on.</p>
                 </div>
             </div>
+            <div class="card col s12 m6 l3">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="{% static "img/ecomm.jpeg" %}">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Ecommerce<i class="material-icons right">more_vert</i></span>
+                        <p><a href="#">This is a link</a></p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Ecommerce<i class="material-icons right">close</i></span>
+                        <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                    </div>
+                </div>
+                <div class="card col s12 m6 l3">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="{% static "img/webdev.jpeg" %}">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">WEB Maintenance<i class="material-icons right">more_vert</i></span>
+                            <p><a href="#">This is a link</a></p>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">WEB Maintenance<i class="material-icons right">close</i></span>
+                            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                        </div>
+                    </div>
+                    <div class="card col s12 m6 l3">
+                            <div class="card-image waves-effect waves-block waves-light">
+                                <img class="activator" src="{% static "img/webdev.jpeg" %}">
+                            </div>
+                            <div class="card-content">
+                                <span class="card-title activator grey-text text-darken-4">Biz Branding<i class="material-icons right">more_vert</i></span>
+                                <p><a href="#">This is a link</a></p>
+                            </div>
+                            <div class="card-reveal">
+                                <span class="card-title grey-text text-darken-4">Biz Branding<i class="material-icons right">close</i></span>
+                                <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                            </div>
+                        </div>
             <div class="card col s12 m6 l3">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="{% static "img/research.jpeg" %}">
@@ -84,12 +110,12 @@
     <div class="container">
         <div class="row">
             <div class="col s12">
-                <h5 class="">Who We Are</h5>
-                <p>We are focused on helping our clients accomplish wonderfull things through online marketing. We start typically by creating a brand new staunning website or redesigning an existing one; evolving into a long-term relationship with them.
+                <h2 class="">Who We Are</h2>
+                <p class="flow-text">We are focused on helping our clients accomplish wonderfull things through online marketing. We start typically by creating a brand new staunning website or redesigning an existing one; evolving into a long-term relationship with them.
 
                 Our projects ride on analytics and constant improvement. So we leverage on technology so we do what we do best so that our clients can focus on running their business with all confidence!</p>
             </div>
-            <a class="btn" href="#">Read More</a>
+            <a class="btn" href="{% url 'pages:about' %}">Read More</a>
         </div>
     </div>
 </section>
@@ -100,8 +126,8 @@
 -->
 
 <section class="section center container">
-    <h5>YOU WANT DEALS?</h5>
-    <P>Subscribe to get our latest deals</P>
+    <h2>YOU WANT DEALS AND TIPS?</h2>
+    <P>Subscribe to get our newsletter</P>
     <form action="{% url 'pages:home' %}" method="POST">
         {% csrf_token %}
         {{ join }}
@@ -114,11 +140,11 @@
 -->
 
 <section class="section" id="team">
-    <div class="container text-center">
+    <div class="container center">
         <div class="row">
             <div class="col s12">
-                <h5 class="">Meet The Team</h5>
-                <p>Our dynamic team are both talented and courteous, bringing unique skills and great levels of expertise to every project.</p>
+                <h2>Meet The Team</h2>
+                <p class="flow-text">Our dynamic team are both talented and courteous, bringing unique skills and great levels of expertise to every project.</p>
                 <a href="{% url 'team:team' %}" class="btn">Learn more</a>
             </div>
         </div>
