--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -6,9 +6,11 @@
 <header class="main-header">
     <div class="overlay">
         <div class="container center">
-            <h1>Website Design/Development <span id="join"></span>& Digital Marketing</h1>
-            <p class="flow-text">We design and develop websites for businesses with stunning results</p>
-            <a class="btn" href="{% url 'contact:contact' %}">Contact Us</a>
+            <div id="showcase">
+                <h1>Website Design/Development <span id="join"></span>& Digital Marketing</h1>
+                <p class="flow-text">We design and develop websites for businesses with stunning results</p>
+                <a class="btn" href="{% url 'contact:contact' %}">Contact Us</a>
+            </div>
         </div>
     </div>
 </header>
@@ -20,7 +22,7 @@
 <div class="container" id="box">
     <h2 class="center">Our Services</h2>
     <div class="row">
-        <div class="card col s12 m6 l3">
+        <div class="card col s12 m6 l4">
                 <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator" src="{% static "img/webdev.jpeg" %}">
                 </div>
@@ -33,7 +35,7 @@
                     <p>Here is some more information about this product that is only revealed once clicked on.</p>
                 </div>
             </div>
-            <div class="card col s12 m6 l3">
+            <div class="card col s12 m6 l4">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="{% static "img/ecomm.jpeg" %}">
                     </div>
@@ -46,7 +48,7 @@
                         <p>Here is some more information about this product that is only revealed once clicked on.</p>
                     </div>
                 </div>
-                <div class="card col s12 m6 l3">
+                <div class="card col s12 m6 l4">
                         <div class="card-image waves-effect waves-block waves-light">
                             <img class="activator" src="{% static "img/webdev.jpeg" %}">
                         </div>
@@ -59,7 +61,7 @@
                             <p>Here is some more information about this product that is only revealed once clicked on.</p>
                         </div>
                     </div>
-                    <div class="card col s12 m6 l3">
+                    <div class="card col s12 m6 l4">
                             <div class="card-image waves-effect waves-block waves-light">
                                 <img class="activator" src="{% static "img/webdev.jpeg" %}">
                             </div>
@@ -72,7 +74,7 @@
                                 <p>Here is some more information about this product that is only revealed once clicked on.</p>
                             </div>
                         </div>
-            <div class="card col s12 m6 l3">
+            <div class="card col s12 m6 l4">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="{% static "img/research.jpeg" %}">
                     </div>
@@ -85,7 +87,7 @@
                         <p>Here is some more information about this product that is only revealed once clicked on.</p>
                     </div>
                 </div>
-                <div class="card col s12 m6 l3">
+                <div class="card col s12 m6 l4">
                         <div class="card-image waves-effect waves-block waves-light">
                             <img class="activator" src="{% static "img/market.jpeg" %}">
                         </div>
@@ -128,11 +130,15 @@
 <section class="section center container">
     <h2>YOU WANT DEALS AND TIPS?</h2>
     <P>Subscribe to get our newsletter</P>
-    <form action="{% url 'pages:home' %}" method="POST">
-        {% csrf_token %}
-        {{ join }}
-        <button class="btn">Join</button>
-    </form>
+    <div class="row">
+        <form action="{% url 'pages:home' %}" method="POST">
+            {% csrf_token %}
+            <div class="input-field">
+                {{ join }}
+            </div>
+            <button class="btn">Join</button>
+        </form>
+    </div>   
 </section>
 
 <!-- Team Section
