--- a/templates/layout.html
+++ b/templates/layout.html
@@ -43,20 +43,24 @@
     {% block content %}
     {% endblock %}
 
-<footer class="main-footer center">
-    <div class="row">
-        <div id="contact" class="col s12 m6">
-            <h5>Contact Us</h5>
-            <p><i class="fas fa-road"></i>14, Ring Road Opp. All Weather, Idua, Eket</p>
-            <p><i class="fas fa-phone-volume"></i>+234 811 5234 897</p>
-            <p><i class="fas fa-envelope"></i>info@neupytech.com</p>
-            <a href="https://web.facebook.com/neupytech/" target="_blank"><i class="fab fa-facebook-f mr-4"></i></a>
-            <a href="https://twitter.com/neupytech" target="_blank"><i class="fab fa-twitter mr-4"></i></a>
-            <a href="" target="_blank"><i class="fab fa-instagram mr-4"></i></a>
+<section class="section center tech-map">
+    <div id="map"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col s12 m6 offset-m6">
+                <div class="card-panel z-depth-5">
+                <h5>Contact Us</h5>
+                    <p><i class="fas fa-road"></i>14, Ring Road Opp. All Weather, Idua, Eket</p>
+                    <p><i class="fas fa-phone-volume"></i>+234 811 5234 897</p>
+                    <p><i class="fas fa-envelope"></i>info@neupytech.com</p>
+                    <a href="https://web.facebook.com/neupytech/" target="_blank"><i class="fab fa-facebook-f mr-4"></i></a>
+                    <a href="https://twitter.com/neupytech" target="_blank"><i class="fab fa-twitter mr-4"></i></a>
+                    <a href="" target="_blank"><i class="fab fa-instagram mr-4"></i></a>
+                </div>
+            </div>
         </div>
-        <div class="col s12 m6" id="map"></div>
     </div>
-</footer>
+</section>
         
 <div class="center">
     <div class="row">
