--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="card col s12 m6 l4">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="{% static "img/webdev.jpeg" %}">
+                            <img class="activator" src="{% static "img/maintenance.jpeg" %}">
                         </div>
                         <div class="card-content">
                             <span class="card-title activator grey-text text-darken-4">WEB Maintenance<i class="material-icons right">more_vert</i></span>
@@ -63,7 +63,7 @@
                     </div>
                     <div class="card col s12 m6 l4">
                             <div class="card-image waves-effect waves-block waves-light">
-                                <img class="activator" src="{% static "img/webdev.jpeg" %}">
+                                <img class="activator" src="{% static "img/branding.jpeg" %}">
                             </div>
                             <div class="card-content">
                                 <span class="card-title activator grey-text text-darken-4">Biz Branding<i class="material-icons right">more_vert</i></span>
