--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">WEB Dev<i class="material-icons right">close</i></span>
-                    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                    <p>We take the research and build website that takes the user experience into consideration.</p>
                 </div>
             </div>
             <div class="card col s12 m6 l4">
@@ -84,7 +84,7 @@
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">Research/Strategy<i class="material-icons right">close</i></span>
-                        <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                        <p>We mine deep to bring you the best with regards to your specific business needs. And then we put the strategy to achieving your goal in motion.</p>
                     </div>
                 </div>
                 <div class="card col s12 m6 l4">
@@ -97,7 +97,7 @@
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">DIGITAL Marketing<i class="material-icons right">close</i></span>
-                            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                            <p>We empower your customers and make them feel confident in your product through marketing</p>
                         </div>
                     </div>
     </div>
@@ -108,20 +108,22 @@
 ==================
 -->
 
-<section class="center" id="about">
+<section class="center grey lighten-3" id="about">
     <div class="container">
         <div class="row">
             <div class="col s12">
                 <h2 class="">Who We Are</h2>
                 <p class="flow-text">We are focused on helping our clients accomplish wonderfull things through online marketing. We start typically by creating a brand new staunning website or redesigning an existing one; evolving into a long-term relationship with them.
 
-                Our projects ride on analytics and constant improvement. So we leverage on technology so we do what we do best so that our clients can focus on running their business with all confidence!</p>
             </div>
             <a class="btn" href="{% url 'pages:about' %}">Read More</a>
         </div>
     </div>
 </section>
 
+<!--
+                Our projects ride on analytics and constant improvement. So we leverage on technology so we do what we do best so that our clients can focus on running their business with all confidence!</p>
+            -->
 
 <!-- Subscribe Section
 ==================
