--- a/posts/templates/posts/post_detail.html
+++ b/posts/templates/posts/post_detail.html
@@ -2,5 +2,7 @@
 
 
 {% block content %}
-    <h1>Hello from Details!</h1>
+    <h2>{{ post.title }}</h2>
+    <p>{{ post.body }}</p>
+    <p>{{ post.date }}</p>
 {% endblock %}
