--- a/posts/templates/posts/post_list.html
+++ b/posts/templates/posts/post_list.html
@@ -1,17 +1,27 @@
 {% extends 'layout.html' %}
+{% load static %}
 
 {% block content %}
 <h1>Hello from Posts</h1>
-<div class="row">
-    <div class="col s12 m6">
-      <div class="card blue-grey darken-1">
-        {% for post in posts %}
-            <h2><a href="{% url 'posts:details' post.slug %}">{{ post.title }}</a></h2>
-            <p>{{ post.body }}</p>
-            <p>{{ post.date }}</p>
-        {% endfor %}       
+<div class="container">
+  <div class="row">
+    {% for post in posts %}
+    <div class="col s12 m4">
+      <div class="card">
+        <div class="card-image">
+        <img src="{{ post.thumb.url }}" alt=""/>
+        </div>
+        <h2 class="card-title"><a href="{% url 'posts:details' post.slug %}">{{ post.title }}</a></h2>
+        <div class="card-content">
+          <p><p>{{ post.date }}</p></p>
+        </div>
       </div>
     </div>
+    {% endfor %}
+  </div>
 </div>
+
 {% endblock %}
-         
+
+
+  
