--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,15 +29,13 @@
                 </div>
             </div>
         </nav>
-
-        <ul class="sidenav" id="mobile-nav">
-            <li><a href="{% url 'pages:about' %}">About Us</a></li>
-            <li><a href="{% url 'pages:portfolio' %}">Portfolio</a></li>
-            <li><a href="{% url 'contact:contact' %}">Contact Us</a></li>
-            <li><a href="{% url 'posts:list' %}">Blog</a></li>
-        </ul>
     </div>
-
+    <ul class="sidenav" id="mobile-nav">
+        <li><a href="{% url 'pages:about' %}">About Us</a></li>
+        <li><a href="{% url 'pages:portfolio' %}">Portfolio</a></li>
+        <li><a href="{% url 'contact:contact' %}">Contact Us</a></li>
+        <li><a href="{% url 'posts:list' %}">Blog</a></li>
+    </ul>
 
     <!-- Django Template Tags -->
     {% block content %}
@@ -67,7 +65,7 @@
 <div class="center">
     <div class="row">
         <div class="s12">
-            <p>Copyright NEUPYTECH &copy;. All rights reserved.</p>
+            <p>Copyright NEUPYTECH &copy; {% now "Y" %}. All rights reserved.</p>
         </div>
     </div>
 </div>
@@ -94,8 +92,14 @@
 
     <!-- Mobile Navbar -->
     <script>
-       const sideNav = document.querySelector('.sidenav');
-       M.Sidenav.init(sideNav, {});       
+       //const sideNav = document.querySelectorAll('.sidenav');
+       //M.Sidenav.init(sideNav, {});    
+       
+       document.addEventListener('DOMContentLoaded', function() {
+        var elems = document.querySelectorAll('.sidenav');
+        var instances = M.Sidenav.init(elems, {});
+      });
+    
     </script>
 </body>
 </html>
