--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,7 +24,7 @@
                     <li><a href="{% url 'pages:about' %}">About Us</a></li>
                     <li><a href="{% url 'pages:portfolio' %}">Portfolio</a></li>
                     <li><a href="{% url 'contact:contact' %}">Contact Us</a></li>
-                    
+                    <li><a href="{% url 'posts:list' %}">Blog</a></li>
                     </ul>
                 </div>
             </div>
@@ -34,7 +34,7 @@
         <li><a href="{% url 'pages:about' %}">About Us</a></li>
         <li><a href="{% url 'pages:portfolio' %}">Portfolio</a></li>
         <li><a href="{% url 'contact:contact' %}">Contact Us</a></li>
-        
+        <li><a href="{% url 'posts:list' %}">Blog</a></li>
     </ul>
 
     <!-- Django Template Tags -->
