--- a/posts/templates/posts/post_list.html
+++ b/posts/templates/posts/post_list.html
@@ -3,6 +3,26 @@
 
 {% block content %}
 <h1>Hello from Posts</h1>
+<div class="container">
+  <div class="row">
+    <div class="col s12 m4">
+      
+    </div>
+    <div class="col s12 m8">
+    {% for post in posts %}
+        <div class="card">
+        <div class="card-image">
+        <img src="{{ post.thumb.url }}" alt=""/>
+        </div>
+        <h2 class="card-title">{{ post.title }}</h2>
+        <div class="card-content">
+          <p>{{ post.date }}</p>
+        </div>
+      </div>
+    {% endfor %}
+  </div>
+</div>
+</div>
 {% endblock %}
 
 
