--- a/team/templates/team/team.html
+++ b/team/templates/team/team.html
@@ -1,6 +1,15 @@
 {% extends 'layout.html' %}
-
+{% load static %}
 
 {% block content %}
     <h1>Hello team!</h1>
+    <div class="container">
+    {% for person in persons %}
+        <div class="card">
+            <div class="card-image">
+                <img src="{{ person.pic.url }}" alt=""/>
+            </div>
+        </div>
+    {% endfor %}
+    </div>
 {% endblock %}
