--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,7 +19,7 @@
         <nav>
             <div class="container">
                 <div class="nav-wrapper">
-                    <a href="{% url 'pages:home' %}" class="brand-logo">neupytech</a>
+                    <a href="{% url 'pages:home' %}" class="brand-logo"><img src="{% static "img/logo9.png" %}" alt=""></a>
                     <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                     <ul class="right hide-on-med-and-down">
                     <li><a href="{% url 'pages:about' %}">About Us</a></li>
